--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,74 @@
-.App {
+body, div {
+  font-family: 'Open Sans';
+}
+
+.nav__list {
+  list-style-type: none;
+  padding-left: 0;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.nav__item {
+  display: inline;
+  padding-right: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav__item:last-child {
+  padding-right: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.nav__link:link {
+  color: black;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav__link:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.nav__link:hover {
+  color: #333;
+  text-decoration: underline;
+  text-shadow: 2px 2px 2px rgba(150, 150, 150, 0.4);
+}
+
+@media only screen and (max-width: 499px) {
+  body {
+    padding: 0;
+    margin: 0;
+/*    background-color: red; */
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (min-width: 500px) and (max-width: 699px) {
+  body {
+    padding: 0;
+    margin: 0;
+/*    background-color: orange; */
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1023px) {
+  body {
+    padding: 0;
+    margin: 10px;
+/*    background-color: yellow; */
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1599px) {
+  body {
+    padding: 0;
+    margin: 20px;
+/*    background-color: green; */
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  body {
+    padding: 0;
+    margin: 20px;
+/*    background-color: blue; */
   }
 }
